--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <link rel="shortcut icon" href="imagens/favicon.ico.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
@@ -17,12 +18,15 @@
     <header>
         <h1>Meus Projetos HTML / CSS</h1>
     </header>
-    <nav>
-        <a href="https://cordeirocode.github.io/projeto-android/" target="_blank">Projeto Android </a>
-        <a href="https://cordeirocode.github.io/projeto-cordel/" target="_blank">Projeto Cordel </a>
-        <a href="https://cordeirocode.github.io/projeto-social/" target="_blank">Projeto Redes Sociais</a>
-        <a href="https://cordeirocode.github.io/projeto-login/" target="_blank">Projeto Tela de Login</a>
-    </nav>
+    <div class="menu">
+        <nav>
+            <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+            <a href="https://cordeirocode.github.io/projeto-android/" target="_blank">Projeto Android </a>
+            <a href="https://cordeirocode.github.io/projeto-cordel/" target="_blank">Projeto Cordel </a>
+            <a href="https://cordeirocode.github.io/projeto-social/" target="_blank">Projeto Redes Sociais</a>
+            <a href="https://cordeirocode.github.io/projeto-login/" target="_blank">Projeto Tela de Login</a>
+        </nav>
+    </div>
     <main>
         <section>
             <div class="titulo">
@@ -63,5 +67,23 @@
     <footer>
         <p>Site desenvolvido por <a href="https://github.com/cordeirocode/" target="_blank">João Paulo Cordeiro</a>, para apresentação de Portifólio</p>
     </footer>
+    <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                document.getElementById('itens').style.display = 'block';
+            } else {
+                document.getElementById('itens').style.display = 'none';
+            }
+        }
+        function clickMenu() {
+           if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+           }    else {
+                    itens.style.display = 'block'
+           }
+        }
+    </script>
 </body>
 </html>
+
+<!-- TESTE -->
