--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 </head>
 <body>
     <header>
-        <h1>Meus Projetos HTML / CSS</h1>
+        <h1>Portifólio HTML / CSS</h1>
+        <div class="menu">
+            <nav>
+                <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+                <a href="https://cordeirocode.github.io/projeto-android/" target="_blank">Projeto Android </a>
+                <a href="https://cordeirocode.github.io/projeto-cordel/" target="_blank">Projeto Cordel </a>
+                <a href="https://cordeirocode.github.io/projeto-social/" target="_blank">Projeto Redes Sociais</a>
+                <a href="https://cordeirocode.github.io/projeto-login/" target="_blank">Projeto Tela de Login</a>
+            </nav>
+        </div>
     </header>
-    <div class="menu">
-        <nav>
-            <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-            <a href="https://cordeirocode.github.io/projeto-android/" target="_blank">Projeto Android </a>
-            <a href="https://cordeirocode.github.io/projeto-cordel/" target="_blank">Projeto Cordel </a>
-            <a href="https://cordeirocode.github.io/projeto-social/" target="_blank">Projeto Redes Sociais</a>
-            <a href="https://cordeirocode.github.io/projeto-login/" target="_blank">Projeto Tela de Login</a>
-        </nav>
-    </div>
     <main>
         <section>
             <div class="titulo">
